Changelog

Kloxo 6.1.15 - 05-feb-2014
##################################
Bug #949: New IP file in /var/tinydns/env is incorrect
Bug #1083: Kloxo 6.1.14 not installing
Security #1082: Cron shell disable

Kloxo 6.1.14 - 04-feb-2014
##################################
Security #1079: [GUI] Implement new PHP Core
Enhancement #1080: PHP 5.3+ Compatibility fixes
Security #1081: Removed lxrestart tool

Kloxo 6.1.13 - 30-jan-2014
##################################
Security fixes
- file manager fix
- sql injection fix

Kloxo 6.1.12 - 03-mar-2012
##################################
Bug #925: Advanced PHP Config page shows empty input fields
Bug #926: 6.1.11 writes empty ipaddr into apache conf files, causing apache to fail.

Kloxo 6.1.11 - 23-feb-2012
##################################
Security hotfix-2012-2: Prevent Web injection

Kloxo 6.1.10 - 07-dec-2011
##################################
Bug #330: Blocking user shouldn't block access to panel by default
Bug #470: Disabling web hosting does not disable page
Bug #684: email at the kloxo slave servers give database error
Bug #725: webmail lost its SSL
Bug #730: Slave auto upgraded / apache config broken
Bug #731: Upgrading Kloxo caused /etc/lighttpd/conf directory to be removed !
Bug #732: New lighttpd directory structure not working for more than 964 domains
Bug #746: [WEBMAIL] No login with horde webmail!
Bug #747: Slave at version 6.1.9?
Bug #755: creation of secondary mx entry at the dns template gives error
Bug #758: Master fails to connect to Slave after upgrade
Bug #760: Exclusive IP leads to 403 Forbidden
Bug #762: apache web domain on slave gives forbidden
Bug #772: [TinyDNS] DNS TTL not added to zone files
Bug #773: Horde failing to send mail in kloxo 6.1.7
Bug #774: [beta] Forgot password page is corrupted
Bug #775: Files listing on Pure-ftp
Bug #779: Links from webmail landing page change to non-ssl
Feature #750: kloxo default page even after doing domain to ip mapping
Feature #753: install old kloxo version?